# RPM-MCTS

./: .gitignore  README.md  pyproject.toml
baselines/: run_all.py
baselines/CoT/: cot.py
baselines/RPM_MCTS/: run_mcts.py  visualize.py
baselines/RPM_MCTS/MCTS/: base.py  mcts.py  task.py
baselines/RPM_MCTS/models/: embedding_model.py
baselines/RPM_MCTS/prompt/: prompts.py
baselines/SRA-MCTS/: run_mcts.py  run_tot.py
baselines/SRA-MCTS/MCTS/: base.py  mcts.py  task.py
baselines/SRA-MCTS/ToT/: dfs.py  task.py
baselines/SRA-MCTS/prompt/: prompts.py
baselines/base_llm/: base_llm.py
configs/: .env_example
dataset/apps_v2/: apps_test_competition150.jsonl  apps_test_interview150.jsonl  apps_test_introductory150.jsonl
dataset/code_contests/: CodeContests150.jsonl
huggingface/: .gitignore  download.py
output/: .gitignore  cal_avg_over_all_datasets.py
rpm_mcts_tools/evaluate/: compare.py  evaluate_by_executor.py
rpm_mcts_tools/executors/: HumanevalExecutor.py  __init__.py  executor_utils.py  py_executor.py
rpm_mcts_tools/knowledge_base/: 1_get_steps_from_canonical.py  2_add_category.py  vector_db_build_kb1.py  vector_db_build_kb2.py  vector_db_search.py
rpm_mcts_tools/ldb_debug/: __init__.py  ldb_debug.py
rpm_mcts_tools/ldb_debug/tracing/: tracer.py
rpm_mcts_tools/staticfg/: builder.py  cfg_ast  get_code_blocks.py
rpm_mcts_tools/utils/: chat_models_api.py  concurrent_processor.py  function_analyzer.py  send_email_utils.py.example  utils.py
scripts/: baselines_run.sh  loop_baselines_run.sh
(+4 files in other folders)
